--- a/Nos-Services.html
+++ b/Nos-Services.html
@@ -18,7 +18,7 @@
     <main>
         <div class="parentphoto">
         <div><img class="boderphoto" src="img depannage/depannage-ordinateur-sospc.name_.jpg" alt=""></div>
-        <div><img class="boderphoto" src="img depannage/ecran-fissure.jpg" alt=""></div>
+        <div><img class="boderphoto1" src="img depannage/ecran-fissure.jpg" alt=""></div>
         </div>
     <div class="deuxtext">
         <div>
@@ -31,6 +31,7 @@
             <li>Ecran casse ?</li>
         </div>
         <div>
+            <br>
             <li>Nous récuperons les appareils défectueux</li>
         </div>
     </div>
