--- a/Nos-Produits.html
+++ b/Nos-Produits.html
@@ -46,12 +46,12 @@
             <div class="recherche"></div>
         </div>
         <div>
-            <img src="" alt="">
-            <img src="" alt="">
+            <a href="Asus.html">   <img class="img-un" src="img asus/Asus-1-removebg-preview.png" alt="1"></a>
+            <a href="HP.html">   <img class="img-un" src="img hp/HP-1-removebg-preview.png" alt="2"></a>
         </div>
         <div>
-            <img src="" alt="">
-            <img src="" alt="">
+           <a href="Lenovo.html">    <img class="img-un" src="img lenovo/Lenovo-1-removebg-preview.png" alt="3"></a>
+           <a href="Razer.html">    <img class="img-un" src="img razer/Razer-1-removebg-preview.png" alt="4"></a>
         </div>
     </main>
 
