--- a/Accueil.html
+++ b/Accueil.html
@@ -17,98 +17,45 @@
         <div><a href="Nous-Contacté.html">Nous Contacté</a></div>
     </header>
 
-    <main>
-        <div class="para">
-            <p> Bienvenue sur notre site spécialiser dans la vente & récuperation d'appareil inutilisable<br>Tech-Store
-            </p>
+    <div class="main-content">
+      
+        <h1>Acheter le Pc de vos Réves</h1>
+        <span>Tech-store vous propose des Pc de qualités</span>
+  
+        <div class="slideshow-container">
+          <div class="slideshow">
+            <div class="slide s1">
+              <div class="overlay"></div>
+              <h2>Razer</h2>
+              <a>Venez l'acheter chez tech-store !</a>
+            </div>
+            <div class="slide s2">
+              <div class="overlay"></div>
+              <h2>Lenovo</h2>
+              <a>Venez l'acheter chez tech-store !</a>
+            </div>
+            <div class="slide s3">
+              <div class="overlay"></div>
+              <h2>Hp</h2>
+              <a>Venez l'acheter chez tech-store !</a>
+            </div>
+            <div class="slide s4">
+              <div class="overlay"></div>
+              <h2>Asus</h2>
+              <a>Venez l'acheter chez tech-store !</a>
+            </div>
+            <div class="slide s5">
+              <div class="overlay"></div>
+              <h2>Dépannage</h2>
+              <a>Venez en profitez chez tech-store !</a>
+            </div>
+          </div>
         </div>
-        <div class="slideaccueil"></div>
-
-
-        <div class="content-slider">
-            <div id="one" class="slide active">
-                <p>
-
-                </p>
-
-                <img class="img-un" src="img asus/Asus-1.jpg" alt="pc1">
-
-                <p>
-
-                </p>
-
-            </div>
-            <div id="two" class="slide">
-
-                <p>
-
-                </p>
-
-                <img class="img-trois" src="img hp/HP-1.jpg" alt="hp1">
-
-                <p>
-
-                </p>
-
-            </div>
-            <div id="three" class="slide">
-
-                <p>
-
-                </p>
-
-                <img class="img-un" src="img lenovo/Lenovo-1.jpg" alt="lenov1">
-
-                <p>
-
-                </p>
-            </div>
-            <div id="four" class="slide">
-
-                <p>
-
-                </p>
-
-                <img class="img-un" src="img razer/Razer-1.jpg" alt="razer1">
-
-                <p>
-
-                </p>
-
-            </div>
-            <div id="five" class="slide">
-                <p>
-
-                </p>
-
-                <img class="img-deux" src="img depannage/depannage-ordinateur-sospc.name_.jpg" alt="depannage1">
-
-                <p>
-
-                </p>
-
-            </div>
-
-        </div>
-
-        <div class="content-btn">
-
-            <div id="btn-prev">
-                <span class="iconify" data-icon="akar-icons:arrow-left"></span>
-
-            </div>
-
-
-            <div id="btn-suiv">
-                <span class="iconify" data-icon="akar-icons:arrow-right"></span>
-
-            </div>
-
-
-        </div>
-        <script src="Scypt-acceuil.js"></script>
-    </main>
-
+  
+      </div>
+  
+  
+<script src="Scypt-acceuil.js"></script>
 </body>
 
 </html>
