--- a/Nos-Produits.html
+++ b/Nos-Produits.html
@@ -45,16 +45,17 @@
 
             <div class="recherche"></div>
         </div>
-        <div>
-            <a href="Asus.html">   <img class="img-un" src="img asus/Asus-1-removebg-preview.png" alt="1"></a>
-            <a href="HP.html">   <img class="img-un" src="img hp/HP-1-removebg-preview.png" alt="2"></a>
+        <div class="conteneur-tout-img">
+        <div class="conteneur-img">
+            <a href="Asus.html"><img class="img-2" src="img asus/Asus-1-removebg-preview.png" alt="1"></a>
+            <a href="HP.html"><img class="img-un" src="img hp/HP-1-removebg-preview.png" alt="2"></a>
         </div>
-        <div>
-           <a href="Lenovo.html">    <img class="img-un" src="img lenovo/Lenovo-1-removebg-preview.png" alt="3"></a>
-           <a href="Razer.html">    <img class="img-un" src="img razer/Razer-1-removebg-preview.png" alt="4"></a>
+        <div class="conteneur-img1">
+           <a href="Lenovo.html"><img class="img-un" src="img lenovo/Lenovo-1-removebg-preview.png" alt="3"></a>
+           <a href="Razer.html"><img class="img-un" src="img razer/Razer-1-removebg-preview.png" alt="4"></a>
+        </div>
         </div>
     </main>
-
 
 
 
