--- a/Nous-Contacté.html
+++ b/Nous-Contacté.html
@@ -44,6 +44,10 @@
 </form>
     </main>
 
-   
+   <footer>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2527.899860069455!2d3.15624661562913!3d50.684683778340535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c329c9894c3563%3A0x1f3607b1a4d70bea!2sHigh%20Tech%20Store!5e0!3m2!1sfr!2sfr!4v1638454154187!5m2!1sfr!2sfr" 
+    width="100%" height="177" style="border:0;" allowfullscreen="" loading="lazy">
+    </iframe>
+   </footer>
 </body>
 </html>
