--- a/Accueil.html
+++ b/Accueil.html
@@ -27,27 +27,27 @@
             <div class="slide s1">
               <div class="overlay"></div>
               <h2>Razer</h2>
-              <a>Venez l'acheter chez tech-store !</a>
+              <a href="Razer.html">Venez l'acheter chez tech-store !</a>
             </div>
             <div class="slide s2">
               <div class="overlay"></div>
               <h2>Lenovo</h2>
-              <a>Venez l'acheter chez tech-store !</a>
+              <a href="Lenovo.html">Venez l'acheter chez tech-store !</a>
             </div>
             <div class="slide s3">
               <div class="overlay"></div>
               <h2>Hp</h2>
-              <a>Venez l'acheter chez tech-store !</a>
+              <a href="HP.html">Venez l'acheter chez tech-store !</a>
             </div>
             <div class="slide s4">
               <div class="overlay"></div>
               <h2>Asus</h2>
-              <a>Venez l'acheter chez tech-store !</a>
+              <a href="Asus.html">Venez l'acheter chez tech-store !</a>
             </div>
             <div class="slide s5">
               <div class="overlay"></div>
               <h2>Dépannage</h2>
-              <a>Venez en profitez chez tech-store !</a>
+              <a href="Nos-Services.html">Venez en profitez chez tech-store !</a>
             </div>
           </div>
         </div>
