--- a/Asus.html
+++ b/Asus.html
@@ -33,6 +33,8 @@
             <p>
                 Le Asus Roux-gue et le pc portable de la marque asus, avec sa Nvidia Rtnul 2060, avec ces
                 6giga de ram et son processeur I3, le asus roux-gue est pas si ouf mais bon ca passe.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptates officia et, suscipit quae
+                at amet magni, atque eaque iusto aut sint quia. Vitae, officia! Suscipit ex amet quidem officiis.
             </p>
         </div>
 
@@ -48,10 +50,13 @@
             <p>
                 Le Asus legion et le pc fixe le plus puissant de la marque asus, avec sa Nvidia Ztx 4060m, avec ces
                 1 yottaoctet de ram et son processeur I14, le Asus legion n'a aucun concurent a sa porter.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim temporibus culpa animi quasi doloribus,
+                architecto fugit quod laudantium, delectus asperiores quos totam, expedita aliquam magni fugiat deserunt
+                non nesciunt aliquid!
             </p>
         </div>
 
-    
+
         <div class="para1">
             <p>
                 Asus Zen
@@ -63,9 +68,12 @@
             <p>
                 Le Asus Zen et le pc pavillon le plus puissant de la marque asus, avec ce pc, vos travaux seront d'une
                 facilité déconcertante, son ecran reversible permet le placer dans plusieurs position.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum ut ex dicta accusantium nam
+                consectetur autem vel itaque. Voluptatibus ducimus temporibus nam laboriosam asperiores. Saepe ipsum cum
+                excepturi minima repellendus?
         </div>
 
-        
+
         <div class="para1">
             <p>
                 Asus trolour
@@ -77,6 +85,9 @@
             <p>
                 Le Asus Trolour et le pc fixe le plus puissant de la marque asus, avec ce pc, vos travaux seront d'une
                 facilité déconcertante, avec ces composant de derniere generation.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique doloremque, saepe esse error ut
+                blanditiis molestias earum mollitia facilis nisi illo quibusdam at! Odio quasi qui perspiciatis cumque.
+                Quasi, odio?
         </div>
 
 
