--- a/HP.html
+++ b/HP.html
@@ -33,6 +33,9 @@
             <p>
                 Le hp Lectron et le pc fixe le plus puissant de la marque hp, avec sa Nvidia Ztx 6060ti, avec ces
                 1 yottaoctet de ram et son processeur I18, le Hp Lectron n'a aucun concurent a sa porter.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro dolor cumque eligendi velit dolorem atque
+                facilis ab eos aliquid totam, dolore harum perspiciatis illo dolorum odit corporis. Accusantium, ut
+                dolores?
             </p>
         </div>
 
@@ -48,10 +51,13 @@
             <p>
                 Le hp Xeno et le pc portable le plus puissant de la marque hp, avec sa Nvidia Ztx 4060m, avec ces
                 1 yottaoctet de ram et son processeur I14, le Hp Lectron n'a aucun concurent a sa porter.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas sequi ea corporis optio, nihil qui
+                suscipit! Sint autem quos consectetur maxime, odio voluptas error sit facere tempora ex recusandae
+                accusamus?
             </p>
         </div>
 
-    
+
         <div class="para1">
             <p>
                 Hp Slide
@@ -63,9 +69,13 @@
             <p>
                 Le hp Slide et le pc pavillon le plus puissant de la marque hp, avec ce pc, vos travaux seront d'une
                 facilité déconcertante, son ecran reversible permet le placer dans plusieurs position.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam perferendis ut aperiam ad quo quidem
+                consequatur. Quos, quibusdam. Sunt sint reiciendis iusto corrupti maxime suscipit, quae beatae est.
+                Dolore, libero.
+
         </div>
 
-        
+
         <div class="para1">
             <p>
                 Hp Graphic
@@ -76,7 +86,11 @@
             <img class="img-hp" src="img hp/HP-4-removebg-preview.png" alt="HP-4">
             <p>
                 Le hp Graphic et le pc tablette le plus puissant de la marque hp, avec ce pc, vos travaux seront d'une
-                facilité déconcertante, son double écran permet de realiser vos travaux artistique le plus facilement et rapidemant possible.
+                facilité déconcertante, son double écran permet de realiser vos travaux artistique le plus facilement et
+                rapidemant possible.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum rem molestias harum, dolores perspiciatis
+                vitae quis. Temporibus impedit enim earum amet error, itaque obcaecati dolores quae, nostrum inventore
+                corrupti accusamus.
         </div>
 
 
