--- a/Nos-Produits.html
+++ b/Nos-Produits.html
@@ -37,6 +37,7 @@
                       <a href="Lenovo.html">Lenovo</a>
                       <a href="Asus.html">Asus</a>
                       <a href="Razer.html">Razer</a>
+                      <a href="Périphé.html">Périphérique</a>
                     </div>
                   </div>
             </div>
