--- a/Lenovo.html
+++ b/Lenovo.html
@@ -34,6 +34,9 @@
                 Le Lenovo Red et le pc portable de la marque lenovo, a la fois condensé de technologie dernierre
                 generation et de design next-gen,
                 Le Lenovo Red est donc le pc gaming avec le meilleur rapport qualité-prix.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur mollitia numquam dicta earum
+                blanditiis veritatis, temporibus asperiores fugiat labore autem tempore delectus architecto assumenda!
+                Voluptas distinctio labore corporis facilis quasi!
 
             </p>
         </div>
@@ -48,8 +51,12 @@
         <div class="content-div-un-deux">
             <img class="img-hp" src="img lenovo/Lenovo-2-removebg-preview.png" alt="HP-2">
             <p>
-                Le Lenovo Neon et le pc portable le plus puissant de la marque Lenovo, avec sa Nvidia Ztx 4060m, avec ces
+                Le Lenovo Neon et le pc portable le plus puissant de la marque Lenovo, avec sa Nvidia Ztx 4060m, avec
+                ces
                 1 yottaoctet de ram et son processeur I14, le Lenovo Neon n'a aucun concurent a sa porter.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia sint enim quae ab cupiditate, maxime
+                corporis sit nulla ad quibusdam ipsum laboriosam eligendi excepturi nesciunt corrupti eaque sed nisi
+                aliquid.
             </p>
         </div>
 
@@ -64,21 +71,28 @@
             <img class="img-hp" src="img lenovo/Lenovo-3-removebg-preview.png" alt="HP-3">
             <p>
                 Le Lenovo Legion est la référence gaming du moment, avec ces composant dernieres technologie, jouer a
-                vos jeux préfére sans aucune latence et avec les meilleurs performance possible
+                vos jeux préfére sans aucune latence et avec les meilleurs performance possible.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error at est ratione temporibus maxime
+                assumenda adipisci dolorem soluta, optio consequatur, magnam, incidunt iusto perspiciatis excepturi
+                eius? Neque laboriosam adipisci ducimus.
         </div>
 
 
         <div class="para1">
             <p>
-            Lenovo Plate
+                Lenovo Plate
             </p>
         </div>
 
         <div class="content-div-un-deux">
             <img class="img-hp" src="img lenovo/Lenovo-4-removebg-preview.png" alt="HP-4">
             <p>
-                Le Lenovo Plate et le pc pavillon le plus puissant de la marque Lenovo, avec ce pc, vos travaux seront d'une
+                Le Lenovo Plate et le pc pavillon le plus puissant de la marque Lenovo, avec ce pc, vos travaux seront
+                d'une
                 facilité déconcertante, avec ces composant de derniere generation.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ad, veniam facere quae eaque quam
+                eligendi officia voluptates animi voluptas cumque aspernatur nam possimus adipisci, veritatis atque
+                voluptate velit at?
         </div>
 
 
