--- a/Razer.html
+++ b/Razer.html
@@ -34,6 +34,9 @@
                 Le Razer Chroma et le pc fixe de la marque Razer, a la fois condensé de technologie dernierre
                 generation et de design next-gen,
                 Le Razer Chroma est donc le pc gaming avec le meilleur rapport qualité-prix.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate, possimus quasi? Blanditiis quis
+                impedit natus alias et, doloremque quia atque possimus provident, inventore perspiciatis, est a! Ea in
+                expedita quod.
 
             </p>
         </div>
@@ -50,6 +53,9 @@
             <p>
                 Le Razer Duo et le pc portable le plus puissant de la marque razer , avec sa Nvidia Ztx 4060m, avec ces
                 1 yottaoctet de ram et son processeur I14, le Razer Duo n'a aucun concurent a sa porter.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, fugit totam rem fuga illo minima
+                veritatis. Facilis fugiat nesciunt accusamus, et laudantium nihil voluptatem, ratione corrupti eos quae
+                quo ipsa.
             </p>
         </div>
 
@@ -57,7 +63,7 @@
         <div class="para1">
             <p>
                 Razer Cobra
-             
+
             </p>
         </div>
 
@@ -65,21 +71,28 @@
             <img class="img-hp" src="img razer/Razer-3-removebg-preview.png" alt="HP-3">
             <p>
                 Le Razer Cobra est la référence gaming du moment, avec ces composant dernieres technologie, jouer a
-                vos jeux préfére sans aucune latence et avec les meilleurs performance possible
+                vos jeux préfére sans aucune latence et avec les meilleurs performance possible.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium neque id rerum doloremque eligendi
+                excepturi quo nam culpa. Quae soluta excepturi amet modi magnam, inventore nemo harum ipsum molestias
+                itaque?
         </div>
 
 
         <div class="para1">
             <p>
-            Razer Infinite
+                Razer Infinite
             </p>
         </div>
 
         <div class="content-div-un-deux">
             <img class="img-hp" src="img razer/Razer-4-removebg-preview.png" alt="HP-4">
             <p>
-                Le Razer Infinite et le pc pavillon le plus puissant de la marque razer, avec ce pc, vos travaux seront d'une
+                Le Razer Infinite et le pc pavillon le plus puissant de la marque razer, avec ce pc, vos travaux seront
+                d'une
                 facilité déconcertante, avec ces composant de derniere generation.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, autem quia nam ipsam quibusdam,
+                obcaecati earum optio magni, eum culpa magnam. Earum consequatur error commodi quis fuga vero quisquam
+                temporibus.
         </div>
 
 
