--- a/Nous-Contacté.html
+++ b/Nous-Contacté.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="Style-Nous-Contacté.css">
     <title>Nous-Contacté</title>
 </head>
+
 <body>
     <header>
         <div><a href="Accueil.html">Accueil</a></div>
@@ -14,7 +16,7 @@
         <div><a href="Nos-Services.html">Nos Services</a></div>
         <div><a href="Nous-Contacté.html">Nous Contacté</a></div>
     </header>
-    
+
     <!--autofocus: le curseur est positionné dans cette case au chargement de la page
     //placeholder: indication grisée 
     //required: il faut renseigner le champs sinon la validation est bloquée
@@ -23,31 +25,37 @@
     // type="number": bascule le clavier sur un smartphone -->
     <main>
         <h2 class="p1">Formulaire de contact</h2>
-<form action="#">
-  <p class="p1"><i>Complétez le formulaire. Les champs marqué par </i><em>*</em> sont <em>obligatoires</em></p>
-  <fieldset>
-      <legend>Information personnelles</legend>
-      <label for="nom">Nom <em>*</em></label>
-      <input id="nom" placeholder="Dupont" autofocus="" required=""><br><br>
-      <label for="telephone">Portable</label>
-      <input id="telephone" type="tel" placeholder="06xxxxxxxx" pattern="06[0-9]{8}"><br><br>
-      <label for="email">Email <em>*</em></label>
-      <input id="email" type="email" placeholder="prenom.nom@polytechnique.edu" required="" pattern="[a-zA-Z]*.[a-zA-Z]*@polytechnique.edu"><br>
-    </fieldset>
-    <br><br>
-    <fieldset>
-      <legend>Contact</legend>
-      <label for="comments">Pourquoi voulez-vous nous contacté?</label><br><br>
-      <textarea id="comments"></textarea>
-  </fieldset>
-  <div class="btn"><p><input type="submit" value="Soummettre"></p></div>
-</form>
+        <form action="#">
+            <p class="p1"><i>Complétez le formulaire. Les champs marqué par </i><em>*</em> sont <em>obligatoires</em>
+            </p>
+            <fieldset>
+                <legend>Information personnelles</legend>
+                <label for="nom">Nom <em>*</em></label>
+                <input id="nom" placeholder="Dupont" autofocus="" required=""><br><br>
+                <label for="telephone">Portable</label>
+                <input id="telephone" type="tel" placeholder="06xxxxxxxx" pattern="06[0-9]{8}"><br><br>
+                <label for="email">Email <em>*</em></label>
+                <input id="email" type="email" placeholder="prenom.nom@polytechnique.edu" required=""
+                    pattern="[a-zA-Z]*.[a-zA-Z]*@polytechnique.edu"><br>
+            </fieldset>
+            <br><br>
+            <fieldset>
+                <legend>Contact</legend>
+                <label for="comments">Pourquoi voulez-vous nous contacté?</label><br><br>
+                <textarea id="comments"></textarea>
+            </fieldset>
+            <div class="btn">
+                <p><input type="submit" value="Soummettre"></p>
+            </div>
+        </form>
     </main>
 
-   <footer>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2527.899860069455!2d3.15624661562913!3d50.684683778340535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c329c9894c3563%3A0x1f3607b1a4d70bea!2sHigh%20Tech%20Store!5e0!3m2!1sfr!2sfr!4v1638454154187!5m2!1sfr!2sfr" 
-    width="100%" height="177" style="border:0;" allowfullscreen="" loading="lazy">
-    </iframe>
-   </footer>
+    <footer>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2527.899860069455!2d3.15624661562913!3d50.684683778340535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c329c9894c3563%3A0x1f3607b1a4d70bea!2sHigh%20Tech%20Store!5e0!3m2!1sfr!2sfr!4v1638454154187!5m2!1sfr!2sfr"
+            width="100%" height="177" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+    </footer>
 </body>
+
 </html>
