--- a/Accueil.html
+++ b/Accueil.html
@@ -11,12 +11,13 @@
 
 <body>
     <header>
-        <div><a href="Accueil.html">Accueil</a></div>
+        <div><a class="lien1" href="Accueil.html">Accueil</a></div>
         <div><a href="Nos-Produits.html">Nos Produits</a></div>
         <div><a href="Nos-Services.html">Nos Services</a></div>
         <div><a href="Nous-Contacté.html">Nous Contacté</a></div>
     </header>
-
+    <main>
+      <p class="p1">TECH-Store est une entreprise française spécialisée dans la vente de produits électroniques & récupérations de matérielle inutilisables avec une garantie de 12 mois.</p>
     <div class="main-content">
       
         <h1>Acheter le Pc de vos Réves</h1>
@@ -51,8 +52,11 @@
             </div>
           </div>
         </div>
-  
       </div>
+    </main>
+    
+    <footer>
+    </footer>
 
   
   
