--- a/recherche-produit.html
+++ b/recherche-produit.html
@@ -20,19 +20,19 @@
             <div class="div1"><img src="img hp/HP-1-removebg-preview.png" alt="HP-1">
             </div>
         </div>
-        <div class="lenovo Lenovo">
-            <div></div>
+        <div class="asus Asus">
+            <div class="div1"><img src="img asus/Asus-1-removebg-preview.png" alt="Asus-1"></div>
+        </div>
+        <div class="lonovo Lenovo">
+            <div class="div1"><img src="img lenovo/Lenovo-1-removebg-preview.png" alt="Lenovo-1"></div>
         </div>
         <div class="razer Razer">
-            <div></div>
-        </div>
-        <div class="asus Asus">
-            <div></div>
+            <div class="div1"><img src="img razer/Razer-1-removebg-preview.png" alt="Razer-1"></div>
         </div>
         <div class="Accessoire peri Peripherique">
-            <div></div>
+            <div class="div1"></div>
         </div>
     </main>
-    
+    <script src="js-recherche.js"></script>
 </body>
 </html>
