--- a/Nous-Contacté.html
+++ b/Nous-Contacté.html
@@ -14,7 +14,7 @@
         <div><a href="Accueil.html">Accueil</a></div>
         <div><a href="Nos-Produits.html">Nos Produits</a></div>
         <div><a href="Nos-Services.html">Nos Services</a></div>
-        <div><a href="Nous-Contacté.html">Nous Contacté</a></div>
+        <div><a class="lien1" href="Nous-Contacté.html">Nous Contacté</a></div>
     </header>
 
     <!--autofocus: le curseur est positionné dans cette case au chargement de la page
@@ -47,6 +47,7 @@
             <div class="btn">
                 <p><input type="submit" value="Soummettre"></p>
             </div>
+        
         </form>
     </main>
 
@@ -55,6 +56,11 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2527.899860069455!2d3.15624661562913!3d50.684683778340535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c329c9894c3563%3A0x1f3607b1a4d70bea!2sHigh%20Tech%20Store!5e0!3m2!1sfr!2sfr!4v1638454154187!5m2!1sfr!2sfr"
             width="100%" height="177" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe>
+        <div><p class="p1">
+            N° de TVA : FR57805167236<br>
+            N° de SIRET : 80516723600019<br>
+            Adresse : CROSS CANAL COMPANY, 38 rue des Mathurins, 75008, PARIS, FR
+        </p></div>
     </footer>
 </body>
 
