--- a/recherche-produit.html
+++ b/recherche-produit.html
@@ -16,17 +16,17 @@
     </header>
 
     <main>
-        <div class="hp HP">
+        <div class="recherche" data-recherche="hp HP">
             <div class="div1"><img src="img hp/HP-1-removebg-preview.png" alt="HP-1">
             </div>
         </div>
-        <div class="asus Asus">
+        <div class="recherche" data-recherche="asus Asus">
             <div class="div1"><img src="img asus/Asus-1-removebg-preview.png" alt="Asus-1"></div>
         </div>
-        <div class="lonovo Lenovo">
+        <div class="recherche" data-recherche="lenovo Lenovo">
             <div class="div1"><img src="img lenovo/Lenovo-1-removebg-preview.png" alt="Lenovo-1"></div>
         </div>
-        <div class="razer Razer">
+        <div class="recherche" data-recherche="razer Razer">
             <div class="div1"><img src="img razer/Razer-1-removebg-preview.png" alt="Razer-1"></div>
         </div>
         <div class="Accessoire peri Peripherique">
