--- a/Accueil.html
+++ b/Accueil.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style-Acceuil.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
     <title>Accueil</title>
 </head>
 
@@ -21,7 +24,7 @@
     <div class="main-content">
       
         <h1>Acheter le Pc de vos Réves</h1>
-        <span>Tech-store vous propose des Pc de qualités</span>
+        <span cl>Tech-store vous propose des Pc de qualités</span>
   
         <div class="slideshow-container">
           <div class="slideshow">
@@ -56,6 +59,11 @@
     </main>
     
     <footer>
+      <div class="divfooter">
+        <a href="www.facebook.com" target="blank"><img src="icon/dashicons-facebook.png" alt="Facebook"></a>
+        <a href="www.twitter.com" target="blank"><img src="icon/dashicons-twitter-alt.png" alt="Twitter"></a>
+        <a href="tel:0783034643" target="blank"><img src="icon/dashicons-phone.png" alt="Phone"></a>
+      </div>
     </footer>
 
   
