--- a/Nos-Services.html
+++ b/Nos-Services.html
@@ -38,6 +38,12 @@
 
     <div class="divbutton"><a href="#">Prendre rendez-vous</a></div>
     </main>
-    
+    <footer>
+        <div class="divfooter">
+          <a href="www.facebook.com" target="blank"><img src="icon/dashicons-facebook.png" alt="Facebook"></a>
+          <a href="www.twitter.com" target="blank"><img src="icon/dashicons-twitter-alt.png" alt="Twitter"></a>
+          <a href="tel:0783034643" target="blank"><img src="icon/dashicons-phone.png" alt="Phone"></a>
+        </div>
+      </footer>
 </body>
 </html>
